--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,9 @@ small device
 
 }
 
+/*
+Medium
+*/
 
 .nav--medium{
     background-color: #fff;
@@ -100,6 +103,8 @@ small device
 }
 
 .bottom-p-tags {
+    width: 100%;
+    margin-left: 20px;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -109,7 +114,9 @@ small device
 /*    }*/
 /*}*/
 
-
+.little-images {
+    margin-top: 43px;
+}
 
 
 @media only screen and (min-width: 768px) {
